--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
             <font color="#0000FF">Wara wara wara</font>
         </div>
 
-        <div class="dimapikmi" onclick='changetitle("Женя элитная шлю")'>
-            Женя элитная шлю
-        </div>
-
-        <div class="dimapikmi" onclick='changetitle("Женя нищая шлюха")'>
-            Женя нищая шлюха
+        <div class="dimapikmi" onclick='changetitle("Наша влд эскортница")'>
+            влд эскортница
         </div>
     </div>
 
